# vae

./: .gitignore  README.md  pyproject.toml
ktrojano_vae/: vae.py
pretrained/: alternative_mse_checkpoint.pth  checkpoint_best.pth
scripts/: generate.py  train.py
