[tool.poetry]
name = "ktrojano-vae"
version = "0.1.0"
description = "A VAE package using PyTorch"
authors = ["Karol Trojanowski <trojanowski.ifuj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"